--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
         <nav data-scope="header">
             <p class="logo">
-                <a href="./startseite.html" class="current" title="Spielplangenerator">Spielplangenerator</a>
+                <a href="./index.html" class="current" title="Spielplangenerator">Spielplangenerator</a>
             </p>
 
             <ul class="navigation">
                 <li class="random-generator">
-                    <a href="./zufallsspielplan.html" title="Zufallsspielplan">Zufallsspielplan</a>
+                    <a href="./html-seiten/zufallsspielplan.html" title="Zufallsspielplan">Zufallsspielplan</a>
                 </li>
             </ul>
         </nav>
