--- a/html-seiten/zufallsspielplan.html
+++ b/html-seiten/zufallsspielplan.html
@@ -14,7 +14,7 @@
 
         <nav data-scope="header">
             <p class="logo">
-                <a href="./startseite.html" class="current" title="Spielplangenerator">Spielplangenerator</a>
+                <a href="./../index.html" class="current" title="Spielplangenerator">Spielplangenerator</a>
             </p>
 
             <ul class="navigation">
